# m24c64-driver

./: Cargo.toml  README.md
examples/: async_embassy.rs  sync_embassy.rs  sync_stm32f4xx_hal.rs
src/: async_variant.rs  lib.rs  sync.rs
