[package]
name = "m24c64-driver"
version = "0.0.1"
edition = "2021"
description = "A Rust embedded-hal(-async) driver for the M24C64 I2C EEPROM"
documentation = "https://docs.rs/m24c64-driver"
repository = "https://github.com/Christopher-06/m24c64-driver"
readme = "README.md"
categories = ["embedded", "hardware-support", "m24c64", "no-std"]
authors = ["Christopher Kock", "Jaci Brunning"]

license = "MIT"

[dependencies]
embedded-hal = "0.2.7"
